--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Enfermerira Esteticista</title>
-
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <img src="imagens/Logo.png" alt="Logo">
-    <p>Beleza e Saúde em Equilíbrio</p>
-    <img src="imagens/perfil.jpg" alt="Foto Perfil">
-    <p>Perfil Profissional
-        Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira, com vasta experiência no ambiente neonatal#link , utiliza suas habilidades para orientar os pais quanto aos cuidados que se deve ter com o recém-nascido #link, bem como, realiza o furo humanizado nas orelhinhas desses bebês .#link 
-        Não o bastante, especializou-se em estética, com isso, passou a realizar em adultos o Procedimento Estético Invasivo para Microvaso#link que confere a estes pacientes a secagem dos vasinhos localizados em seus membros inferiores e, assim, melhorando o aspecto da região acometida.
-        Neonatal  setor do hospital preparado para receber bebês que nasceram antes das 37 semanas de gestação</p> 
+    <div class="logo">
+        <img src="imagens/Logo.png">
+        <p>Beleza e Saúde em Equilíbrio</p>
+    </div>
+    <div class="perfilprof">
+        <img src="imagens/perfil.jpg">
+        <p>Perfil Profissional
+            Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira, com vasta experiência no ambiente neonatal#link , utiliza suas habilidades para orientar os pais quanto aos cuidados que se deve ter com o recém-nascido #link, bem como, realiza o furo humanizado nas orelhinhas desses bebês .#link 
+            Não o bastante, especializou-se em estética, com isso, passou a realizar em adultos o Procedimento Estético Invasivo para Microvaso#link que confere a estes pacientes a secagem dos vasinhos localizados em seus membros inferiores e, assim, melhorando o aspecto da região acometida.
+            Neonatal  setor do hospital preparado para receber bebês que nasceram antes das 37 semanas de gestação</p> 
+    </div>
     <img src="imagens/peim.jpg" alt="Procedimento Estético Invasivo para Microvasos">
     <p>Procedimento Estético Invasivo para Microvasos
         Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores como predisposição genética, utilização de anticoncepcionais, gestação, obesidade e outros que interferem na circulação sanguínea dos membros inferiores das pessoas.
