--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <div class="logo">
-        <img src="imagens/Logo.png">
-        <p>Beleza e Saúde em Equilíbrio</p>
-    </div>
     <div class="perfilprof">
         <img src="imagens/perfil.jpg">
         <p>Perfil Profissional
@@ -18,21 +14,15 @@
             Não o bastante, especializou-se em estética, com isso, passou a realizar em adultos o Procedimento Estético Invasivo para Microvaso#link que confere a estes pacientes a secagem dos vasinhos localizados em seus membros inferiores e, assim, melhorando o aspecto da região acometida.
             Neonatal  setor do hospital preparado para receber bebês que nasceram antes das 37 semanas de gestação</p> 
     </div>
+    <h1>SERVIÇOS OFERECIDOS</h1>
     <img src="imagens/peim.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-    <p>Procedimento Estético Invasivo para Microvasos
-        Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores como predisposição genética, utilização de anticoncepcionais, gestação, obesidade e outros que interferem na circulação sanguínea dos membros inferiores das pessoas.
-        Trata-se de um método minimamente invasivo que além de eliminar sintomas como queimação e dor também melhora a estética da região acometida. 
-        Pessoas que possuem comorbidades, tais como diabetes descompensada, insuficiência cardíaca, patologia oncológica ativa, antecedentes de trombose venosa profunda, estados infecciosos, arteriopatias isquêmica e hepatopatias não devem se submeter a este tratamento.</p>
+        <h2>Procedimento Estético Invasivo para Microvasos</h2> 
+        <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação.</p>
     <img src="imagens/furohumanizadoorelhas.jpg" alt="Furo Humanizado">
-    <p>Furo humanizado nas orelhinhas desses bebês
-        Trata-se de um procedimento no qual se combina o uso de pomadas anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado. 
-        Fica a critério dos pais qual técnica será aplicada, podendo ser a Body Piercing quando o furo é feito utilizando-se de um cateter do tipo jelco que, inclusive, será o guia do brinco ou o método System quando se faz uso de aplicadores descartáveis compostos com o modelo de brinco da Studex.
-        O momento ideal para que seja realizado o primeiro furo na orelhinha do bebê deve ser após o cumprimento das principais doses de vacinas.</p> 
+        <h2>Furo humanizado nas orelhinhas desses bebês</h2>
+        <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
     <img src="imagens/cuidadoscbebe.jpg" alt="Cuidados com o bebê">
-    <p>Cuidados que se deve ter com o recém-nascido
-        É interessante que o bebê esteja devidamente agasalhado e que possa dormir, em seu berço, mas que seja próximo aos seus pais. 
-        No momento do banho utilize água morna e sabonete neutro. Uma vez enxuto, realize a assepsia do umbigo utilizando álcool a 70% aplicando-o com um cotonete.
-        A amamentação deve ocorrer sempre que o bebê demonstrar fome.
-        O bebê não necessita de qualquer outro líquido, como água ou chás, pois o aleitamento materno é suficiente para suprir suas necessidades.</p>         
+        <h2>Cuidados com o recém nascido</h2>
+        <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p>   
 </body>
 </html>
