--- a/index.html
+++ b/index.html
@@ -7,22 +7,35 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <div class="perfilprof">
-        <img src="imagens/perfil.jpg">
-        <p>Perfil Profissional
-            Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira, com vasta experiência no ambiente neonatal#link , utiliza suas habilidades para orientar os pais quanto aos cuidados que se deve ter com o recém-nascido #link, bem como, realiza o furo humanizado nas orelhinhas desses bebês .#link 
+    <div class="perfilfoto">
+        <img src="imagem/perfil.jpg" alt="Foto do perfil">
+        <div class="perfiltexto">
+            <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira, com vasta experiência no ambiente neonatal#link , utiliza suas habilidades para orientar os pais quanto aos cuidados que se deve ter com o recém-nascido #link, bem como, realiza o furo humanizado nas orelhinhas desses bebês .#link 
             Não o bastante, especializou-se em estética, com isso, passou a realizar em adultos o Procedimento Estético Invasivo para Microvaso#link que confere a estes pacientes a secagem dos vasinhos localizados em seus membros inferiores e, assim, melhorando o aspecto da região acometida.
-            Neonatal  setor do hospital preparado para receber bebês que nasceram antes das 37 semanas de gestação</p> 
+            Neonatal  setor do hospital preparado para receber bebês que nasceram antes das 37 semanas de gestação</p>
+        </div>
     </div>
     <h1>SERVIÇOS OFERECIDOS</h1>
-    <img src="imagens/peim.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+    <div class="peimfoto">
+        <img src="imagens/peim.jpg" alt="Procedimento Estético Invasivo para Microvasos">
         <h2>Procedimento Estético Invasivo para Microvasos</h2> 
-        <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação.</p>
-    <img src="imagens/furohumanizadoorelhas.jpg" alt="Furo Humanizado">
+        <div class="peimtexto">
+            <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação.</p>
+        </div>
+    </div>
+    <div class="furohumanizadofoto">
+        <img src="imagens/furohumanizado.jpg" alt="Furo Humanizado">
         <h2>Furo humanizado nas orelhinhas desses bebês</h2>
-        <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
-    <img src="imagens/cuidadoscbebe.jpg" alt="Cuidados com o bebê">
+        <div class="furohumanizadotexto">
+            <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
+        </div>
+    </div>
+    <div class="cuidadosbebefoto">
+        <img src="imagens/cuidadosbebe.jpg" alt="Cuidados com o bebê">
         <h2>Cuidados com o recém nascido</h2>
-        <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p>   
+        <div class="cuidadosbebetexto">
+            <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
+        </div>  
+    </div>
 </body>
 </html>
