--- a/index.html
+++ b/index.html
@@ -7,35 +7,39 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <div class="perfilfoto">
-        <img src="imagem/perfil.jpg" alt="Foto do perfil">
-        <div class="perfiltexto">
-            <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira, com vasta experiência no ambiente neonatal#link , utiliza suas habilidades para orientar os pais quanto aos cuidados que se deve ter com o recém-nascido #link, bem como, realiza o furo humanizado nas orelhinhas desses bebês .#link 
-            Não o bastante, especializou-se em estética, com isso, passou a realizar em adultos o Procedimento Estético Invasivo para Microvaso#link que confere a estes pacientes a secagem dos vasinhos localizados em seus membros inferiores e, assim, melhorando o aspecto da região acometida.
-            Neonatal  setor do hospital preparado para receber bebês que nasceram antes das 37 semanas de gestação</p>
+    <header>
+        <div class="perfil">
+            <img src="imagens/perfil-imagem.jpg" alt="Foto do perfil">
+            <div class="perfil-texto">
+                <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
+                Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
+            </div>
         </div>
-    </div>
-    <h1>SERVIÇOS OFERECIDOS</h1>
-    <div class="peimfoto">
-        <img src="imagens/peim.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-        <h2>Procedimento Estético Invasivo para Microvasos</h2> 
-        <div class="peimtexto">
-            <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação.</p>
+        <h1>SERVIÇOS OFERECIDOS</h1>
+        <div class="peim">
+            <h2><a name="peim">Procedimento Estético Invasivo para Microvasos</a> </h2> 
+            <img src="imagens/peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+            <div class="peim-texto">
+                <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>
+            </div>
         </div>
-    </div>
-    <div class="furohumanizadofoto">
-        <img src="imagens/furohumanizado.jpg" alt="Furo Humanizado">
-        <h2>Furo humanizado nas orelhinhas desses bebês</h2>
-        <div class="furohumanizadotexto">
-            <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
+        <div class="furohumanizado">
+            <h2><a name="furohumanizado">Furo humanizado nas orelhinhas desses bebês</a></h2>
+            <img src="imagens/furohumanizado-imagem.jpg" alt="Furo Humanizado">
+            <div class="furohumanizado-texto">
+                <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
+             </div>
         </div>
-    </div>
-    <div class="cuidadosbebefoto">
-        <img src="imagens/cuidadosbebe.jpg" alt="Cuidados com o bebê">
-        <h2>Cuidados com o recém nascido</h2>
-        <div class="cuidadosbebetexto">
-            <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
-        </div>  
-    </div>
+        <div class="cuidadosbebe">
+            <h2><a name="cuidadosbebe">Cuidados com o recém nascido</a></h2>
+            <img src="imagens/cuidadosbebe-imagem.jpg" alt="Cuidados com o bebê">
+            <div class="cuidadosbebe-texto">
+                <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
+            </div>  
+        </div>
+        <div class="videoorientacoes">
+
+        </div>
+    </header>
 </body>
 </html>
