--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <header>
         <div class="perfil">
-            <figure>
-                <img src="imagens/perfil-imagem.jpg" alt="Foto do perfil">
-            </figure>
+            <img src="imagens/perfil-imagem.jpg" class="perfil-imagem" alt="Foto do perfil">
             <div class="perfil-texto">
                 <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
                 Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
@@ -20,8 +18,7 @@
         <h1>SERVIÇOS OFERECIDOS</h1>
         <div class="peim">
             <h2><a name="peim">Procedimento Estético Invasivo para Microvasos</a> </h2>
-            <figure>
-                <img src="imagens/peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+            <img src="imagens/peim-imagem.jpg" class="peim-imagem" alt="Procedimento Estético Invasivo para Microvasos">
             </figure>
             <div class="peim-texto">
                 <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>
