--- a/index.html
+++ b/index.html
@@ -9,38 +9,35 @@
 <body>
     <header>
         <div class="perfil">
-            <img src="imagens/perfil-imagem.jpg" class="perfil-imagem" alt="Foto do perfil">
+            <img src="imagens/perfil-imagem.png" class="perfil-imagem" alt="Foto do perfil">
             <div class="perfil-texto">
                 <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
                 Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
             </div>
         </div>
-        <h1>SERVIÇOS OFERECIDOS</h1>
-        <div class="peim">
-            <h2><a name="peim">Procedimento Estético Invasivo para Microvasos</a> </h2>
-            <img src="imagens/peim-imagem.jpg" class="peim-imagem" alt="Procedimento Estético Invasivo para Microvasos">
-            </figure>
-            <div class="peim-texto">
-                <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>
+        <div class="serviços">
+            <h1>SERVIÇOS OFERECIDOS</h1>
+            <div class="serviços-peim">
+                <h2><a name="peim">Procedimento Estético Invasivo para Microvasos</a></h2>
+                <img src="imagens/serviços-peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+                <div class="peim-texto">
+                    <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>
+                </div>
             </div>
-        </div>
-        <div class="furohumanizado">
-            <h2><a name="furohumanizado">Furo humanizado nas orelhinhas desses bebês</a></h2>
-            <figure>
-                <img src="imagens/furohumanizado-imagem.jpg" alt="Furo Humanizado">
-            </figure>
-            <div class="furohumanizado-texto">
-                <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
-             </div>
-        </div>
-        <div class="cuidadosbebe">
-            <h2><a name="cuidadosbebe">Cuidados com o recém nascido</a></h2>
-            <figure>
-                <img src="imagens/cuidadosbebe-imagem.jpg" alt="Cuidados com o bebê">
-            </figure>
-            <div class="cuidadosbebe-texto">
-                <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
-            </div>  
+            <div class="serviços-furohumanizado">
+                <h2><a name="furohumanizado">Furo humanizado nas orelhinhas desses bebês</a></h2>
+                <img src="imagens/serviços-furohumanizado-imagem.jpg" alt="Furo Humanizado">
+                <div class="serviços-furohumanizado-texto">
+                    <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
+                </div>
+            </div>
+            <div class="serviços-cuidadosbebe">
+                <h2><a name="cuidadosbebe">Cuidados com o recém nascido</a></h2>
+                <img src="imagens/serviços-cuidadosbebe-imagem.jpg" alt="Cuidados com o bebê">
+                <div class="serviços-cuidadosbebe-texto">
+                    <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
+                </div>  
+            </div>
         </div>
         <div class="videoorientacoes">
 
