--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="serviços">
-            <h1>SERVIÇOS OFERECIDOS</h1>
+            <h1>SERVIÇOS DISPONÍVEIS</h1>
             <div class="serviços-peim">
                 <h2><a name="peim">Procedimento Estético Invasivo para Microvasos</a></h2>
                 <img src="imagens/serviços-peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
