--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Enfermerira Esteticista</title>
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">       
 </head>
 <body>
     <header>
         <div class="perfil">
-            <img src="imagens/perfil-imagem.png" class="perfil-imagem" alt="Foto do perfil">
+            <div class="perfil-imagem">
+                <img src="imagens/perfil-imagem.png" alt="Foto do perfil">
+            </div>
+            
             <div class="perfil-texto">
-                <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
+                <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank"><b>neonatal</b></a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
                 Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
             </div>
         </div>
