--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Enfermerira Esteticista</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">       
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Raleway:wght@300&display=swap" rel="stylesheet">     
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
             </div>
             
             <div class="perfil-texto">
-                <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank"><b>neonatal</b></a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
+                <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank"><strong>neonatal</strong></a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
                 Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
             </div>
         </div>
