--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <header>
         <div class="perfil">
             <div class="perfil-imagem">
-                <img src="imagens/perfil-imagem.png" alt="Foto do perfil">
+                <picture>
+                    <img src="imagens/perfil-imagem-p.png" alt="Imagem de perfil">
+                </picture>
             </div>
-            
             <div class="perfil-texto">
                 <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank"><strong>neonatal</strong></a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
                 Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
