--- a/index.html
+++ b/index.html
@@ -10,38 +10,34 @@
 <body>
     <header>
         <div class="perfil">
-            <div class="perfil-imagem">
-                <picture>
-                    <img src="imagens/perfil-imagem-p.png" alt="Imagem de perfil">
-                </picture>
-            </div>
-            <div class="perfil-texto">
-                <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank"><strong>neonatal</strong></a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidadosbebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furohumanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
-                Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
-            </div>
+            <picture>
+                <img src="imagens/perfil-imagem-p.png" alt="Imagem de perfil">
+            </picture>
+            <p class="perfil-texto">Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidados-bebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furo-humanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
+            Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
         </div>
         <div class="serviços">
             <h1>SERVIÇOS DISPONÍVEIS</h1>
             <div class="serviços-peim">
                 <h2><a name="peim">Procedimento Estético Invasivo para Microvasos</a></h2>
-                <img src="imagens/serviços-peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                <div class="peim-texto">
-                    <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>
-                </div>
+                <picture>
+                    <img src="imagens/serviços-peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+                </picture>
+                <p class="peim-texto">Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>   
             </div>
-            <div class="serviços-furohumanizado">
-                <h2><a name="furohumanizado">Furo humanizado nas orelhinhas desses bebês</a></h2>
-                <img src="imagens/serviços-furohumanizado-imagem.jpg" alt="Furo Humanizado">
-                <div class="serviços-furohumanizado-texto">
-                    <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
-                </div>
+            <div class="serviços-furo-humanizado">
+                <h2><a name="furo-humanizado">Furo humanizado nas orelhinhas desses bebês</a></h2>
+                <picture>
+                    <img src="imagens/serviços-furo-humanizado-imagem.jpg" alt="Furo Humanizado">
+                </picture>
+                <p class="serviços-furo-humanizado-texto">Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
             </div>
-            <div class="serviços-cuidadosbebe">
-                <h2><a name="cuidadosbebe">Cuidados com o recém nascido</a></h2>
-                <img src="imagens/serviços-cuidadosbebe-imagem.jpg" alt="Cuidados com o bebê">
-                <div class="serviços-cuidadosbebe-texto">
-                    <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
-                </div>  
+            <div class="serviços-cuidados-bebe">
+                <h2><a name="cuidados-bebe">Cuidados com o recém nascido</a></h2>
+                <picture>
+                    <img src="imagens/serviços-cuidados-bebe-imagem.jpg" alt="Cuidados com o bebê">
+                </picture>
+                <p class="serviços-cuidados-bebe-texto">Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
             </div>
         </div>
         <div class="videoorientacoes">
