--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <header>
-        <div class="perfil">
+        <h1>LOGO</h1>
+        <a class="menu-principal" href="#">Agende um Procedimento</a>
+        <a class="menu-principal" href="#">Faça um orçamento</a>
+        <nav class="perfil">
+            
             <picture>
                 <img src="imagens/perfil-imagem-p.png" alt="Imagem de perfil">
             </picture>
-            <p class="perfil-texto">Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidados-bebe">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furo-humanizado">furo humanizado nas orelhinhas</a>  desses bebês. 
-            Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim">PEIM.</a></p>
-        </div>
-        <div class="serviços">
+            <p class="perfil-texto">Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank" class="perfil-texto-link">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidados-bebe" class="perfil-texto-link">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furo-humanizado" class="perfil-texto-link">furo humanizado nas orelhinhas</a>  desses bebês. 
+            Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim" class="perfil-texto-link">PEIM.</a></p>
+        </nav>
+    </header>
+    <main>
+        <section class="serviços">
             <h1>SERVIÇOS DISPONÍVEIS</h1>
             <div class="serviços-peim">
                 <h2><a name="peim">Procedimento Estético Invasivo para Microvasos</a></h2>
@@ -39,10 +45,22 @@
                 </picture>
                 <p class="serviços-cuidados-bebe-texto">Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
             </div>
-        </div>
-        <div class="videoorientacoes">
+        </section>
+        <section class="noticias">
+            <article>
+                <h2>Notícias sobre estética</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A facilis expedita amet nam! Aperiam ullam architecto ipsa neque error? Excepturi eveniet rerum a, corrupti voluptate sed quae itaque nam repellat?</p>
+            </article>
+        </section>
+        <section class="videoorientacoes">
+            <picture>
 
-        </div>
-    </header>
+            </picture>            
+        </section>
+    </main>
+    <footer>
+        <p>Desenvolvido por Luciano Marcos</p>
+    </footer>
+
 </body>
 </html>
