--- a/index.html
+++ b/index.html
@@ -10,41 +10,35 @@
 <body>
     <header>
         <a href="#">LOGO</a>
-        <nav class
-        
-        <a class="menu-principal" href="#">Agende um Procedimento</a>
-        <a class="menu-principal" href="#">Faça um orçamento</a>
-        <nav class="perfil">
-            
-            <picture>
-                <img src="imagens/perfil-imagem-p.png" alt="Imagem de perfil">
-            </picture>
+        <nav>
+            <ul class="menu-principal">
+                <li><a href="#">Agende um Procedimento</a></li>
+                <li><a href="#">Faça um orçamento</a></li>
+            </ul>   
+        </nav>
+    </header>
+        <section class="perfil">
+            <img src="imagens/perfil-imagem-p.png" alt="Imagem de perfil">
             <p class="perfil-texto">Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank" class="perfil-texto-link">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <a href="#cuidados-bebe" class="perfil-texto-link">cuidados com o recém-nascido</a>, bem como, realiza o <a href="#furo-humanizado" class="perfil-texto-link">furo humanizado nas orelhinhas</a>  desses bebês. 
             Não o bastante, também, realiza em adultos o Procedimento Estético Invasivo para Microvaso - <a href="#peim" class="perfil-texto-link">PEIM.</a></p>
-        </nav>
+        </section>
     </header>
     <main>
         <section class="serviços">
             <h1>SERVIÇOS DISPONÍVEIS</h1>
             <div class="serviços-peim">
                 <h2><a name="peim">Procedimento Estético Invasivo para Microvasos</a></h2>
-                <picture>
-                    <img src="imagens/serviços-peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                </picture>
+                <img src="imagens/serviços-peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
                 <p class="peim-texto">Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>   
             </div>
             <div class="serviços-furo-humanizado">
-                <h2><a name="furo-humanizado">Furo humanizado nas orelhinhas desses bebês</a></h2>
-                <picture>
-                    <img src="imagens/serviços-furo-humanizado-imagem.jpg" alt="Furo Humanizado">
-                </picture>
+                <h2><a name="furo-humanizado">Furo humanizado nas orelhinhas desses bebês</a></h2>                    
+                <img src="imagens/serviços-furo-humanizado-imagem.jpg" alt="Furo Humanizado">
                 <p class="serviços-furo-humanizado-texto">Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
             </div>
             <div class="serviços-cuidados-bebe">
                 <h2><a name="cuidados-bebe">Cuidados com o recém nascido</a></h2>
-                <picture>
-                    <img src="imagens/serviços-cuidados-bebe-imagem.jpg" alt="Cuidados com o bebê">
-                </picture>
+                <img src="imagens/serviços-cuidados-bebe-imagem.jpg" alt="Cuidados com o bebê">
                 <p class="serviços-cuidados-bebe-texto">Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
             </div>
         </section>
