--- a/index.html
+++ b/index.html
@@ -20,27 +20,25 @@
     <main>
         <section class="perfil">
             <img src="imagens/perfil-imagem-p.png" alt="Imagem de perfil">
-            <p class="perfil-texto">Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
+            <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
             Não o bastante, também, faz em adultos, o Procedimento Estético Invasivo para Microvaso - PEIM.</p>
         </section>
-        <section>
+        <section class="serviços">
             <h1>SERVIÇOS DISPONÍVEIS</h1>
-            <div class="serviços">
-                <div class="serviços-peim">
-                    <h2>Procedimento Estético Invasivo para Microvasos - PEIM</h2>
-                    <img src="imagens/serviços-peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                    <p class="serviço-peim-texto">Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>   
-                </div>
-                <div class="serviços-furo-humanizado">
-                    <h2>Furo humanizado nas orelhinhas desses bebês</h2>                    
-                    <img src="imagens/serviços-furo-humanizado-imagem.jpg" alt="Furo Humanizado">
-                    <p class="serviços-furo-humanizado-texto">Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
-                </div>
-                <div class="serviços-cuidados-bebe">
-                    <h2>Cuidados com o recém nascido</h2>
-                    <img src="imagens/serviços-cuidados-bebe-imagem.jpg" alt="Cuidados com o bebê">
-                    <p class="serviços-cuidados-bebe-texto">Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
-                </div>
+            <div class="peim">
+                <h2>Procedimento Estético Invasivo para Microvasos - PEIM</h2>
+                <img src="imagens/peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+                <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>   
+            </div>
+            <div class="furo-humanizado">
+                <h2>Furo humanizado nas orelhinhas desses bebês</h2>                    
+                <img src="imagens/furo-humanizado-imagem.jpg" alt="Furo Humanizado">
+                <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
+            </div>
+            <div class="cuidados-bebe">
+                <h2>Cuidados com o recém nascido</h2>
+                <img src="imagens/cuidados-bebe-imagem.jpg" alt="Cuidados com o bebê">
+                <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
             </div>
         </section>
         <section class="noticias">
@@ -56,7 +54,9 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Luciano Marcos</p>
+        <address>
+            <p>Criação e Desenvolvimento: <a href="mailto:lucianomarcos156@hotmail.com">Luciano Marcos</a>2022</p>
+        </address> 
     </footer>
 
 </body>
