--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="imagens/Logo.png"></a>
+        <a href="#">Logo</a>
         <nav>
             <ul class="menu-principal">
                 <li><a href="#">Agende um Procedimento</a></li>
@@ -19,29 +19,31 @@
     </header>
     <main>
         <section class="perfil">
-            <img src="imagens/perfil-imagem-p.png" alt="Imagem de perfil">
-            <p>Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
-            Não o bastante, também, faz em adultos, o Procedimento Estético Invasivo para Microvaso - PEIM.</p>
+            <img src="imagens/perfil-imagem1.jpeg" alt="Imagem de perfil">
+            <aside>
+                Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
+                Não o bastante, também, faz em adultos, o Procedimento Estético Invasivo para Microvaso - PEIM.
+            </aside>
         </section>
         <section class="serviços">
             <h1>SERVIÇOS DISPONÍVEIS</h1>
-            <div class="peim">
-                <h2>Procedimento Estético Invasivo para Microvasos - PEIM</h2>
-                <img src="imagens/peim-imagem.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                <p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>   
+            <div>
+                <!---<h2>Procedimento Estético Invasivo para Microvasos - PEIM</h2>-->
+                <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+                <!--<p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>-->   
             </div>
-            <div class="furo-humanizado">
-                <h2>Furo humanizado nas orelhinhas desses bebês</h2>                    
-                <img src="imagens/furo-humanizado-imagem.jpg" alt="Furo Humanizado">
-                <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
+            <div>
+                <!--<h2>Furo humanizado nas orelhinhas desses bebês</h2>-->                    
+                <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado">
+                <!--<p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>-->
             </div>
-            <div class="cuidados-bebe">
-                <h2>Cuidados com o recém nascido</h2>
-                <img src="imagens/cuidados-bebe-imagem.jpg" alt="Cuidados com o bebê">
-                <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
+            <div>
+                <!--<h2>Cuidados com o recém nascido</h2>-->
+                <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
+                <!--<p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p>--> 
             </div>
         </section>
-        <section class="noticias">
+        <!--<section class="noticias">
             <article>
                 <h2>Notícias sobre estética</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A facilis expedita amet nam! Aperiam ullam architecto ipsa neque error? Excepturi eveniet rerum a, corrupti voluptate sed quae itaque nam repellat?</p>
@@ -51,13 +53,13 @@
             <picture>
 
             </picture>            
-        </section>
+        </section>-->
     </main>
-    <footer>
+    <!--<footer>
         <address>
             <p>Criação e Desenvolvimento: <a href="mailto:lucianomarcos156@hotmail.com">Luciano Marcos</a>2022</p>
         </address> 
-    </footer>
+    </footer>-->
 
 </body>
 </html>
