--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
             </aside>
         </section>
         <section class="serviços">
-            <h1>SERVIÇOS DISPONÍVEIS</h1>
-            <div>
-                <!---<h2>Procedimento Estético Invasivo para Microvasos - PEIM</h2>-->
-                <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                <!--<p>Esta técnica tem por finalidade eliminar os microvasos decorrentes de fatores que possam interferir na circulação sanguínea dos membros inferiores tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>-->   
-            </div>
-            <div>
-                <!--<h2>Furo humanizado nas orelhinhas desses bebês</h2>-->                    
-                <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado">
-                <!--<p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>-->
-            </div>
-            <div>
-                <!--<h2>Cuidados com o recém nascido</h2>-->
-                <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
-                <!--<p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p>--> 
+            <h1>Saiba um pouco mais sobre os serviços disponíveis</h1>
+            <div class="serviços-disponíveis">
+                <div id="furo-humanizado">
+                    <h2>Furo humanizado</h2>                   
+                    <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado">
+                    <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
+                </div>
+                <div id="cuidados-bebe">
+                    <h2>Cuidados com o recém nascido</h2>
+                    <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
+                    <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
+                </div>
+                <div id="peim">
+                    <h2>PEIM</h2>
+                    <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+                    <p>O Procedimento Estético Invasivo para Microvasos é uma técnica que tem por finalidade eliminar os microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores, tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>   
+                </div>
             </div>
         </section>
         <!--<section class="noticias">
