--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <a href="#">Logo</a>
+        <div id="logo">
+            <img src="imagens/logo.png" alt="Logo">
+            <p>Beleza e Saúde em Equilíbrio</p>
+        </div>
         <nav>
             <ul class="menu-principal">
                 <li><a href="#">Agende um Procedimento</a></li>
@@ -21,8 +24,8 @@
         <section class="perfil">
             <img src="imagens/perfil-imagem1.jpeg" alt="Imagem de perfil">
             <aside>
-                Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
-                Não o bastante, também, faz em adultos, o Procedimento Estético Invasivo para Microvaso - PEIM.
+                Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <strong>cuidados com o recém-nascido</strong> e, também, realiza o <strong>furo humanizado nas orelhinhas desses bebês</strong>. 
+                Não o bastante, faz em adultos, o Procedimento Estético Invasivo para Microvaso -<strong>PEIM</strong>.
             </aside>
         </section>
         <section class="serviços">
